# fastConverter

./: .clang-format  CMakeLists.txt  README.md  help.html  main.cpp
.cache/clangd/index/: flags.cpp.7F93DAFFBE3122EB.idx  flags.h.44C765D15F19A567.idx  imconfig.h.D3D84B8A0C1C25D3.idx  imgui.cpp.15C66269460EBA24.idx  imgui.h.B4AF30B6C1D99F2D.idx  imgui_draw.cpp.36D10EED0D9B60FC.idx  imgui_impl_glfw.cpp.9A92A1F41B23A587.idx  imgui_impl_glfw.cpp.CF08C1D0EFB1B820.idx  imgui_impl_glfw.h.79D1E9AB4ABE8651.idx  imgui_impl_glfw.h.F95C4BEDEEB978FE.idx  imgui_impl_opengl3.cpp.81406A5B332280BC.idx  imgui_impl_opengl3.cpp.BE598D22ABF55805.idx  imgui_impl_opengl3.h.3CD943636F5B1103.idx  imgui_impl_opengl3.h.CF82CC432E33F8C1.idx  imgui_impl_opengl3_loader.h.3D5AA02429DAF652.idx  imgui_internal.h.F5B5ECBFAB2A7D25.idx  imgui_tables.cpp.DC4E6751DF2DD4D4.idx  imgui_widgets.cpp.720702810C4CC548.idx  main.cpp.3F9E6B777581D9A1.idx  presets.cpp.E38D04CA437AD48F.idx  presets.h.49E3004DCBACF0BE.idx  utils.cpp.DA7BE529ACE12E50.idx  utils.h.FE64093886D45716.idx  worker.cpp.57805CFFFC7433C7.idx  worker.h.F6BE987BB45A855C.idx
presets/: default.preset
src/: flags.cpp  flags.h  presets.cpp  presets.h  utils.cpp  utils.h  worker.cpp  worker.h
